--- a/img_Gallery/CSS/myStyle.css
+++ b/img_Gallery/CSS/myStyle.css
@@ -11,14 +11,55 @@
   flex-wrap: wrap;
   align-content: flex-start;
 }
-
-.card {
+.container__card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  height: 195px;
-  width: 18%;
+  width: 18.5%;
   border-radius: 10px;
   margin: 10px;
   padding: 0px;
+  position: relative;
+}
+.container__card--normal {
+  height: 195px;
+}
+.container__card--high {
+  height: 315px;
+}
+
+.card__label--spain {
+  width: 60px;
+  height: 20px;
+  background-color: #1293D2;
+  font-size: 8px;
+  color: white;
+  text-align: center;
+  line-height: 20px;
+  border-radius: 3px;
+}
+
+.toledo img {
+  width: 100%;
+  height: 142px;
+  border-radius: 10px 10px 0px 0px;
+}
+.toledo .card__title {
+  margin-top: 3px;
+  margin-left: 15px;
+  margin-bottom: 6px;
+  font-size: 15px;
+  font-weight: 400;
+}
+.toledo .card__content {
+  margin-top: 7px;
+  margin-left: 15px;
+  font-size: 1px;
+  font-weight: 200;
+}
+.toledo .card__label--spain {
+  position: absolute;
+  top: 20px;
+  right: 15px;
+  float: right;
 }
 
 /*# sourceMappingURL=myStyle.css.map */
