--- a/img_Gallery/sass/myStyle.scss
+++ b/img_Gallery/sass/myStyle.scss
@@ -1,14 +1,14 @@
 $height--normal: 195px;
-
+$height--high: 315px;
 $width--large: 40%;
-$width--middle: 18%;
+$width--middle: 18.5%;
 $width--small: 10%;
+$labelColor--blue: #1293D2;
 
 * {
 		box-sizing: border-box;
 	  font-family: Arial, Helvetica, sans-serif;
   }
-
 .container {
 	height: 1080px;
 	width: 1440px;
@@ -16,15 +16,56 @@ $width--small: 10%;
 	display: flex;
 	flex-wrap: wrap;
 	align-content: flex-start;
+	&__card {
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	width: $width--middle;
+  	border-radius: 10px;
+  	margin: 10px;
+		padding: 0px;
+		position: relative;
+	}
+	&__card--normal {
+		height: $height--normal;
+	}
+	&__card--high {
+		height: $height--high;
+	}
 }
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	height: $height--normal;
-  width: $width--middle;
-  border-radius: 10px;
-  margin: 10px;
-	padding: 0px;
+.card__label--spain{
+	width: 60px;
+	height: 20px;
+	background-color: $labelColor--blue;
+	font-size: 8px;
+	color: white;
+	text-align: center;
+	line-height: 20px;
+	border-radius: 3px;
+}
+.toledo {
+	img {
+		width: 100%;
+  	height: 142px;
+  	border-radius: 10px 10px 0px 0px;
+	}
+	.card__title {
+		margin-top: 3px;
+		margin-left: 15px;
+		margin-bottom: 6px;
+		font-size: 15px;
+		font-weight: 400;
+	}
+	.card__content {
+		margin-top: 7px;
+		margin-left: 15px;
+		font-size: 1px;
+		font-weight: 200;
+	}
+	.card__label--spain {
+		position: absolute;
+		top: 20px;
+		right: 15px;
+		float: right;
+	}
 }
 
 
