--- a/img_Gallery/CSS/myStyle.css
+++ b/img_Gallery/CSS/myStyle.css
@@ -18,6 +18,7 @@
   margin: 10px;
   padding: 0px;
   position: relative;
+  overflow: hidden;
 }
 .container__card--normal {
   height: 195px;
@@ -27,6 +28,7 @@
 }
 
 .card__label--spain {
+  position: absolute;
   width: 60px;
   height: 20px;
   background-color: #1293D2;
@@ -35,12 +37,30 @@
   text-align: center;
   line-height: 20px;
   border-radius: 3px;
+  cursor: pointer;
+}
+
+.card__label--italy {
+  position: absolute;
+  width: 60px;
+  height: 20px;
+  background-color: #f10909;
+  font-size: 8px;
+  color: white;
+  text-align: center;
+  line-height: 20px;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 .toledo img {
   width: 100%;
   height: 142px;
   border-radius: 10px 10px 0px 0px;
+  transition: transform 0.5s;
+}
+.toledo img:hover {
+  transform: scale(1.05);
 }
 .toledo .card__title {
   margin-top: 3px;
@@ -56,10 +76,60 @@
   font-weight: 200;
 }
 .toledo .card__label--spain {
-  position: absolute;
   top: 20px;
   right: 15px;
   float: right;
+}
+
+.venice img {
+  width: 100%;
+  height: 130px;
+  border-radius: 10px 10px 0px 0px;
+  transition: transform 0.5s;
+}
+.venice img:hover {
+  transform: scale(1.05);
+}
+.venice .card__title {
+  margin-top: 3px;
+  margin-left: 15px;
+  margin-bottom: 6px;
+  font-size: 18px;
+  font-weight: 400;
+}
+.venice .card__content {
+  height: 40%;
+  margin-top: 7px;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 1px;
+  font-weight: 200;
+  overflow: hidden;
+  opacity: 0.8;
+  background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.venice .card__label--italy {
+  top: 20px;
+  right: 15px;
+  float: right;
+}
+.venice .viewMoreButton {
+  font-size: 13px;
+  color: white;
+  background-color: #0681e1;
+  height: 30px;
+  width: 100px;
+  border-radius: 15px;
+  text-align: center;
+  line-height: 30px;
+  position: absolute;
+  left: 50%;
+  margin-left: -55px;
+  bottom: 30px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=myStyle.css.map */
