--- a/img_Gallery/sass/myStyle.scss
+++ b/img_Gallery/sass/myStyle.scss
@@ -4,6 +4,8 @@ $width--large: 40%;
 $width--middle: 18.5%;
 $width--small: 10%;
 $labelColor--blue: #1293D2;
+$labelColor--red: #f10909;
+$buttonBlue: #0681e1;
 
 * {
 		box-sizing: border-box;
@@ -23,6 +25,7 @@ $labelColor--blue: #1293D2;
   	margin: 10px;
 		padding: 0px;
 		position: relative;
+		overflow: hidden;
 	}
 	&__card--normal {
 		height: $height--normal;
@@ -32,6 +35,7 @@ $labelColor--blue: #1293D2;
 	}
 }
 .card__label--spain{
+	position: absolute;
 	width: 60px;
 	height: 20px;
 	background-color: $labelColor--blue;
@@ -40,12 +44,29 @@ $labelColor--blue: #1293D2;
 	text-align: center;
 	line-height: 20px;
 	border-radius: 3px;
+	cursor: pointer;
+}
+.card__label--italy{
+	position: absolute;
+	width: 60px;
+	height: 20px;
+	background-color: $labelColor--red;
+	font-size: 8px;
+	color: white;
+	text-align: center;
+	line-height: 20px;
+	border-radius: 3px;
+	cursor: pointer;
 }
 .toledo {
 	img {
 		width: 100%;
   	height: 142px;
   	border-radius: 10px 10px 0px 0px;
+		transition: transform 0.5s;
+		&:hover {
+			transform:scale(1.05);
+		}
 	}
 	.card__title {
 		margin-top: 3px;
@@ -61,10 +82,61 @@ $labelColor--blue: #1293D2;
 		font-weight: 200;
 	}
 	.card__label--spain {
-		position: absolute;
 		top: 20px;
 		right: 15px;
 		float: right;
+	}
+}
+.venice {
+	img {
+		width: 100%;
+  	height: 130px;
+  	border-radius: 10px 10px 0px 0px;
+		transition: transform 0.5s;
+		&:hover {
+			transform:scale(1.05);
+		}
+	}
+	.card__title{
+		margin-top: 3px;
+		margin-left: 15px;
+		margin-bottom: 6px;
+		font-size: 18px;
+		font-weight: 400;
+	}
+	.card__content {
+		height: 40%;
+		margin-top: 7px;
+		margin-left: 15px;
+		margin-right: 15px;
+		font-size: 1px;
+		font-weight: 200;
+		overflow: hidden;
+		opacity: 0.8;
+		background: linear-gradient(180deg, #000000 0%, rgba(0,0,0,0));
+		background-clip: text;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
+	.card__label--italy{
+		top: 20px;
+		right: 15px;
+		float: right;
+	}
+	.viewMoreButton {
+		font-size: 13px;
+		color: white;
+		background-color: $buttonBlue;
+		height: 30px;
+		width: 100px;
+		border-radius: 15px;
+		text-align: center;
+		line-height: 30px;
+		position: absolute;
+		left: 50%;
+		margin-left: -55px;
+		bottom: 30px;
+		cursor: pointer;
 	}
 }
 
