--- a/img_Gallery/CSS/myStyle.css
+++ b/img_Gallery/CSS/myStyle.css
@@ -65,17 +65,41 @@
 .toledo .card__title {
   margin-top: 3px;
   margin-left: 15px;
-  margin-bottom: 6px;
+  margin-bottom: 3px;
   font-size: 15px;
-  font-weight: 400;
 }
 .toledo .card__content {
   margin-top: 7px;
   margin-left: 15px;
   font-size: 1px;
-  font-weight: 200;
 }
 .toledo .card__label--spain {
+  top: 20px;
+  right: 15px;
+  float: right;
+}
+
+.boboli {
+  background-image: url(../image/bg-4.png);
+  background-repeat: no-repeat;
+  background-color: #cccccc;
+  background-size: contain;
+}
+.boboli .card__title {
+  color: white;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  font-size: 20px;
+}
+.boboli .card__content {
+  color: white;
+  position: absolute;
+  bottom: 15px;
+  left: 20px;
+  font-size: 10px;
+}
+.boboli .card__label--italy {
   top: 20px;
   right: 15px;
   float: right;
@@ -95,7 +119,6 @@
   margin-left: 15px;
   margin-bottom: 6px;
   font-size: 18px;
-  font-weight: 400;
 }
 .venice .card__content {
   height: 40%;
@@ -103,7 +126,6 @@
   margin-left: 15px;
   margin-right: 15px;
   font-size: 1px;
-  font-weight: 200;
   overflow: hidden;
   opacity: 0.8;
   background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0));
