--- a/img_Gallery/CSS/myStyle.css
+++ b/img_Gallery/CSS/myStyle.css
@@ -1,6 +1,8 @@
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  padding: 0px;
+  margin: 0px;
 }
 
 .container {
@@ -16,7 +18,6 @@
   width: 18.5%;
   border-radius: 10px;
   margin: 10px;
-  padding: 0px;
   position: relative;
   overflow: hidden;
 }
@@ -25,6 +26,22 @@
 }
 .container__card--high {
   height: 315px;
+}
+.container__card--wide {
+  width: 38.4%;
+}
+
+.container--high {
+  height: 315px;
+  width: 18.5%;
+  margin: 10px;
+  border-style: solid;
+  border-color: #000000;
+  border-width: 6px;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
 }
 
 .card__label--spain {
@@ -91,6 +108,7 @@
   bottom: 20px;
   left: 20px;
   font-size: 20px;
+  margin: 20px 0;
 }
 .boboli .card__content {
   color: white;
@@ -98,6 +116,7 @@
   bottom: 15px;
   left: 20px;
   font-size: 10px;
+  margin: 10px 0;
 }
 .boboli .card__label--italy {
   top: 20px;
